--- a/architecte-infrastructure.html
+++ b/architecte-infrastructure.html
@@ -1,1 +1,183 @@
-﻿﻿<!DOCTYPE html> <html lang="fr"> <head> <meta charset="utf-8"> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <meta http-equiv="Content-Language" content="fr"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>3.1 Architecte Infrastructure** - FEA</title> <link rel="stylesheet" href="CSS/style.css"> </head> <body> <header class="header"> <div class="container"> <div class="logo"> <h1>FEA</h1> <p>Filié¨re d'Excelence Architecture</p> </div> <nav class="navigation"> <ul> <li><a href="index.html">† Retour é l'index</a></li> <li><a href="#evaluation">évaluation Technique</a></li> <li><a href="#fiche-poste">Fiche de Poste</a></li> </ul> </nav> </div> </header> <main class="main-content"> <!-- Profil Header --> <section class="profile-header-section"> <div class="container"> <div class="profile-header"> <h1>3.1 Architecte Infrastructure**</h1> <span class="badge available">Disponible</span> </div> <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#cloud">3. Cloud & Infrastructure</a> †’ <span>3.1 Architecte Infrastructure**</span> </div> </div> </section> <!-- Section évaluation Technique --> <section id="evaluation" class="section"> <div class="container"> <h2>évaluation Technique</h2> <div class="competence-domain"> <h3>Vision & stratégie infrastructure</h3> <p>Définir la stratégie d'infrastructure (on-premise, cloud, hybride). élaborer la feuille de route infrastructure. Assurer la cohérence entre les choix infra, les besoins métiers et les contraintes techniques.</p> </div> <div class="competence-domain"> <h3>Architecture & conception technique</h3> <p>Conception d'architectures serveurs, stockage, réseaux, virtualisation. Architecture de datacenters, interconnexion, résilience. Architecture é haute disponibilità& tolérance de panne.</p> </div> <div class="competence-domain"> <h3>Cloud & plateformes hybrids</h3> <p>Expérience de migration infra vers le cloud (AWS, Azure, GCP). Conception d'architectures hybrides. Utilisation de services managés (VM, stockage, réseau cloud).</p> </div> <div class="competence-domain"> <h3>Virtualisation & conteneurs</h3> <p>Virtualisation (VMware, Hyper-V, KVM€¦). Containers & orchestration (Docker, Kubernetes) appliqués au niveau infra. Isolation, sécurité, dimensionnement conteneurisé.</p> </div> <div class="competence-domain"> <h3>Réseau & interconnexion</h3> <p>Compréhension approfondie des réseaux (LAN, WAN, SD-WAN, VPN). Routage, commutation, pare-feu, load balancing. Interconnexion entre sites géographiques & cloud.</p> </div> <div class="competence-domain"> <h3>Sécuritàinfrastructure</h3> <p>Sécurisation des accé¨s, segmentation réseau. Chiffrement des données au repos / en transit. Gestion des certificats, IDS / IPS, pare-feu. Continuité, plans de reprise d'infrastructure.</p> </div> <div class="competence-domain"> <h3>Infrastructure as Code & automatisation</h3> <p>Provisionnement automatique de l'infrastructure (Terraform, Ansible, etc.). Scripting, automatisation des té¢ches d'exploitation. CI/CD pour les composants infra.</p> </div> <div class="competence-domain"> <h3>Gestion de la performance & monitoring</h3> <p>Outils de supervision (métriques, alarmes). Monitoring, logs, alerting, capacitàé diagnostiquer les goulots d'étranglement. Dimensionnement, scaling, optimisation des ressources.</p> </div> </div> </section> <!-- Section Fiche de Poste --> <section id="fiche-poste" class="section"> <div class="container"> <h2>Fiche de Poste pour Agent de talent</h2> <div class="mission-description"> <h3>Vous étes Architecte Infrastructure SI et vous recherchez une mission en freelance ?</h3> <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des assurances.</p> </div> <div class="mission-expectations"> <h3>Ce que l'on attend de la personne (type de mission)</h3> <p>L'Architecte Infrastructure est chargàde :</p> <ul> <li>Définir la stratégie d'infrastructure (on-premise, cloud, hybride) et élaborer la feuille de route</li> <li>Concevoir des architectures techniques : serveurs, stockage, réseaux, virtualisation, haute disponibilité</li> <li>Piloter les migrations vers le cloud et concevoir des architectures hybrides</li> <li>Automatiser le provisionnement via Infrastructure as Code (Terraform, Ansible€¦)</li> <li>Superviser les performances, diagnostiquer les incidents et optimiser les ressources</li> <li>Assurer la sécuritàde l'infrastructure : segmentation réseau, chiffrement, plans de reprise</li> <li>Collaborer avec les équipes techniques et métiers, et vulgariser les choix d'architecture</li> </ul> </div> <div class="profile-requirements"> <h3>Ce que la personne est (compétences attendues)</h3> <p>Un(e) Architecte Infrastructure avec :</p> <ul> <li>Une expérience significative (5 é 10 ans) en architecture et exploitation des systé¨mes</li> <li>Une formation Bac+5 en informatique ou ingénierie</li> <li>Une maé®trise des environnements hybrides et cloud (AWS, Azure, GCP)</li> <li>Des compétences en virtualisation (VMware, Hyper-V), conteneurs (Docker, Kubernetes), réseaux (LAN, WAN, VPN)</li> <li>Une expertise en sécuritàinfrastructurelle, supervision, automatisation</li> <li>Des qualités personnelles : rigueur, autonomie, esprit de synthé¨se, communication claire</li> </ul> </div> <div class="rate-info"> <h3>Taux Journalier Moyen (TJM)</h3> <p class="rate">650 é 800 ‚¬/jour HT</p> </div> <div class="contact-section"> <h3>Intéressé(e) par cette opportunità?</h3> <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn" class="contact-btn">Publier l'offre</button> </div> </div> </section> </main> <footer class="footer"> <div class="container"> <p>&copy; 2025 FEA - Filié¨re Architecture. Tous droits réservés.</p> </div> </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle" class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> <span class="chatbot-notification" id="chat-notification"></span> </button> <!-- Conteneur du chatbot (cachàpar défaut) --> <div id="chatbot-container"> <div class="chatbot-header"> <div class="header-content"> <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot"> </div> <div class="chatbot-info"> <h3>Assistant FEA</h3> <p>En ligne</p> </div> </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"> <line x1="5" y1="12" x2="19" y2="12"></line> </svg> </button> </div> <div class="chatbot-messages" id="chat-messages"> <div class="welcome-message"> <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p> <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre sujet liàé la filié¨re architecture.</p> </div> </div> <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> </button> </div> </div> <script src="JS/chatbot.js"></script> <script src="JS/email-service.js"></script> <script src="JS/script.js"></script> </body> </html> 
+﻿﻿<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="fr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>3.1 Architecte Infrastructure** - FEA</title>
+    <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>FEA</h1>
+                <p>Filière d'Excellence Architecture</p>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">› Retour à l'index</a></li>
+                    <li><a href="#evaluation">Évaluation Technique</a></li>
+                    <li><a href="#fiche-poste">Fiche de Poste</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main-content"> <!-- Profil Header -->
+        <section class="profile-header-section">
+            <div class="container">
+                <div class="profile-header">
+                    <h1>3.1 Architecte Infrastructure**</h1> <span class="badge available">Disponible</span>
+                </div>
+                <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#cloud">3. Cloud &
+                        Infrastructure</a> †’ <span>3.1 Architecte Infrastructure**</span> </div>
+            </div>
+        </section> <!-- Section Évaluation Technique -->
+        <section id="evaluation" class="section">
+            <div class="container">
+                <h2>Évaluation Technique</h2>
+                <div class="competence-domain">
+                    <h3>Vision & stratégie infrastructure</h3>
+                    <p>Définir la stratégie d'infrastructure (on-premise, cloud, hybride). élaborer la feuille de route
+                        infrastructure. Assurer la cohérence entre les choix infra, les besoins métiers et les
+                        contraintes techniques.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Architecture & conception technique</h3>
+                    <p>Conception d'architectures serveurs, stockage, réseaux, virtualisation. Architecture de
+                        datacenters, interconnexion, résilience. Architecture é haute disponibilità& tolérance de panne.
+                    </p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Cloud & plateformes hybrids</h3>
+                    <p>Expérience de migration infra vers le cloud (AWS, Azure, GCP). Conception d'architectures
+                        hybrides. Utilisation de services managés (VM, stockage, réseau cloud).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Virtualisation & conteneurs</h3>
+                    <p>Virtualisation (VMware, Hyper-V, KVM€¦). Containers & orchestration (Docker, Kubernetes)
+                        appliqués au niveau infra. Isolation, sécurité, dimensionnement conteneurisé.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Réseau & interconnexion</h3>
+                    <p>Compréhension approfondie des réseaux (LAN, WAN, SD-WAN, VPN). Routage, commutation, pare-feu,
+                        load balancing. Interconnexion entre sites géographiques & cloud.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>securité infrastructure</h3>
+                    <p>Sécurisation des accé¨s, segmentation réseau. Chiffrement des données au repos / en transit.
+                        Gestion des certificats, IDS / IPS, pare-feu. Continuité, plans de reprise d'infrastructure.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Infrastructure as Code & automatisation</h3>
+                    <p>Provisionnement automatique de l'infrastructure (Terraform, Ansible, etc.). Scripting,
+                        automatisation des té¢ches d'exploitation. CI/CD pour les composants infra.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Gestion de la performance & monitoring</h3>
+                    <p>Outils de supervision (métriques, alarmes). Monitoring, logs, alerting, Capacitédiagnostiquer
+                        les goulots d'étranglement. Dimensionnement, scaling, optimisation des ressources.</p>
+                </div>
+            </div>
+        </section> <!-- Section Fiche de Poste -->
+        <section id="fiche-poste" class="section">
+            <div class="container">
+                <h2>Fiche de Poste pour Agent de talent</h2>
+                <div class="mission-description">
+                    <h3>Vous étes Architecte Infrastructure SI et vous recherchez une mission en freelance ?</h3>
+                    <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
+                        assurances.</p>
+                </div>
+                <div class="mission-expectations">
+                    <h3>Ce que l'on attend de la personne (type de mission)</h3>
+                    <p>L'Architecte Infrastructure est chargàde :</p>
+                    <ul>
+                        <li>Définir la stratégie d'infrastructure (on-premise, cloud, hybride) et élaborer la feuille de
+                            route</li>
+                        <li>Concevoir des architectures techniques : serveurs, stockage, réseaux, virtualisation, haute
+                            disponibilité</li>
+                        <li>Piloter les migrations vers le cloud et concevoir des architectures hybrides</li>
+                        <li>Automatiser le provisionnement via Infrastructure as Code (Terraform, Ansible€¦)</li>
+                        <li>Superviser les performances, diagnostiquer les incidents et optimiser les ressources</li>
+                        <li>Assurer la securité de l'infrastructure : segmentation réseau, chiffrement, plans de reprise
+                        </li>
+                        <li>Collaborer avec les équipes techniques et métiers, et vulgariser les choix d'architecture
+                        </li>
+                    </ul>
+                </div>
+                <div class="profile-requirements">
+                    <h3>Ce que la personne est (compétences attendues)</h3>
+                    <p>Un(e) Architecte Infrastructure avec :</p>
+                    <ul>
+                        <li>Une expérience significative (5 é 10 ans) en architecture et exploitation des systé¨mes</li>
+                        <li>Une formation Bac+5 en informatique ou ingénierie</li>
+                        <li>Une maîtrise des environnements hybrides et cloud (AWS, Azure, GCP)</li>
+                        <li>Des compétences en virtualisation (VMware, Hyper-V), conteneurs (Docker, Kubernetes),
+                            réseaux (LAN, WAN, VPN)</li>
+                        <li>Une expertise en securité infrastructurelle, supervision, automatisation</li>
+                        <li>Des qualités personnelles : rigueur, autonomie, esprit de Synthèse, communication claire
+                        </li>
+                    </ul>
+                </div>
+                <div class="rate-info">
+                    <h3>Taux Journalier Moyen (TJM)</h3>
+                    <p class="rate">800 Euro ‚jour HT</p>
+                </div>
+                <div class="contact-section">
+                    <h3>Intéressé(e) par cette opportunità?</h3>
+                    <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn"
+                        class="contact-btn">Publier l'offre</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 FEA - Filière Architecture. Tous droits réservés.</p>
+        </div>
+    </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle"
+        class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg> <span class="chatbot-notification" id="chat-notification"></span> </button>
+    <!-- Conteneur du chatbot (cachàpar défaut) -->
+    <div id="chatbot-container">
+        <div class="chatbot-header">
+            <div class="header-content">
+                <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png"
+                        alt="Chatbot"> </div>
+                <div class="chatbot-info">
+                    <h3>Assistant FEA</h3>
+                    <p>En ligne</p>
+                </div>
+            </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                </svg> </button>
+        </div>
+        <div class="chatbot-messages" id="chat-messages">
+            <div class="welcome-message">
+                <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p>
+                <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre
+                    sujet liàé la Filière architecture.</p>
+            </div>
+        </div>
+        <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button
+                id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg> </button> </div>
+    </div>
+    <script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
+</body>
+
+</html>
