--- a/architecte-solution.html
+++ b/architecte-solution.html
@@ -1,1 +1,162 @@
-﻿﻿<!DOCTYPE html> <html lang="fr"> <head> <meta charset="utf-8"> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <meta http-equiv="Content-Language" content="fr"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>2.1 Architecte Solution** - FEA</title> <link rel="stylesheet" href="CSS/style.css"> </head> <body> <header class="header"> <div class="container"> <div class="logo"> <h1>FEA</h1> <p>Filiére d'Excelence Architecture</p> </div> <nav class="navigation"> <ul> <li><a href="index.html">Retour à l'index</a></li> <li><a href="#evaluation">évaluation Technique</a></li> <li><a href="#fiche-poste">Fiche de Poste</a></li> </ul> </nav> </div> </header> <main class="main-content"> <!-- Profil Header --> <section class="profile-header-section"> <div class="container"> <div class="profile-header"> <h1>2.1 Architecte Solution**</h1> <span class="badge available">Disponible</span> </div> <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#arch-si">2. Architecture SI</a> †’ <span>2.1 Architecte Solution**</span> </div> </div> </section> <!-- Section évaluation Technique --> <section id="evaluation" class="section"> <div class="container"> <h2>évaluation Technique</h2> <div class="competence-domain"> <h3>Architecture & conception de solutions</h3> <p>Architecture orientée services / micro-services, API, middleware, intégration d'applications. Urbanisation du SI, cohérence fonctionnelle, applicative et infrastructure. Définition de la cible, trajectoire (roadmap) et arbitrages techniques.</p> </div> <div class="competence-domain"> <h3>Intégration & échanges inter-systémes</h3> <p>Bus de services (ESB), API Management, orchestration, messaging, data flows. Interopérabilité, gestion des données de référence (master data).</p> </div> <div class="competence-domain"> <h3>Technologies & stack technique</h3> <p>Java (Spring, Quarkus, Hibernate), frameworks backend. Front-end (React, HTML, CSS). Conteneurs & Kubernetes, Docker. Bases de données relationnelles & NoSQL (MariaDB, MongoDB).</p> </div> <div class="competence-domain"> <h3>DevSecOps & infrastructure</h3> <p>Mise en place de chaé®nes CI/CD. Automatisation, Infrastructure as Code. Exigences de sécuritàintégrées ("security by design"). Résilience, performance, scalabilité.</p> </div> <div class="competence-domain"> <h3>Modélisation & méthodologies</h3> <p>Modélisation (UML, BPMN, ArchiMate). Utilisation de référentiels d'architecture. Bonnes pratiques et patterns architecturaux. Méthodes agiles / SAFe.</p> </div> </div> </section> <!-- Section Fiche de Poste --> <section id="fiche-poste" class="section"> <div class="container"> <h2>Fiche de Poste pour Agent de talent</h2> <div class="mission-description"> <h3>Vous étes Architecte Solution SI et vous recherchez une mission en freelance ?</h3> <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des assurances.</p> </div> <div class="mission-expectations"> <h3>Ce que l'on attend de la personne (type de mission)</h3> <p>L'Architecte Solution est responsable de :</p> <ul> <li>Concevoir des solutions techniques cohérentes avec l'urbanisation du SI</li> <li>Définir la cible d'architecture, les trajectoires et les arbitrages techniques</li> <li>Assurer l'intégration inter-systé¨mes via API, ESB, messaging, data flows</li> <li>Mettre en Å“uvre des pratiques DevSecOps : CI/CD, automatisation, sécuritàby design</li> <li>Modéliser les solutions (UML, BPMN, ArchiMate) et appliquer les bonnes pratiques</li> <li>Accompagner les projets de transformation SI dans des environnements é maturitàtechnique variable</li> <li>Animer des ateliers, coacher les équipes, vulgariser les choix techniques</li> </ul> </div> <div class="profile-requirements"> <h3>Ce que la personne est (compétences attendues)</h3> <p>Un(e) Architecte Solution avec :</p> <ul> <li>Une maé®trise des architectures orientées services, micro-services, middleware</li> <li>Une expertise sur les technologies backend (Java, Spring, .NET, Quarkus), front-end (React), conteneurs (Docker, Kubernetes), bases de données (SQL/NoSQL)</li> <li>Une capacitàé challenger les choix techniques et assurer la cohérence du SI</li> <li>Une connaissance des méthodes agiles / SAFe et des référentiels d'architecture</li> <li>Des qualités personnelles : autonomie, curiositàtechnologique, diplomatie, force de proposition, sens de la responsabilité</li> </ul> </div> <div class="rate-info"> <h3>Taux Journalier Moyen (TJM)</h3> <p class="rate">600 é 750 ‚¬/jour HT</p> </div> <div class="contact-section"> <h3>Intéressé(e) par cette opportunità?</h3> <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn" class="contact-btn">Publier l'offre</button> </div> </section> </main> <footer class="footer"> <div class="container"> <p>&copy; 2025 FEA - Filié¨re Architecture. Tous droits réservés.</p> </div> </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle" class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> <span class="chatbot-notification" id="chat-notification"></span> </button> <!-- Conteneur du chatbot (cache par défaut) --> <div id="chatbot-container"> <div class="chatbot-header"> <div class="header-content"> <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot"> </div> <div class="chatbot-info"> <h3>Assistant FEA</h3> <p>En ligne</p> </div> </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"> <line x1="5" y1="12" x2="19" y2="12"></line> </svg> </button> </div> <div class="chatbot-messages" id="chat-messages"> <div class="welcome-message"> <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p> <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre sujet liàé la filié¨re architecture.</p> </div> </div> <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> </button> </div> </div> <script src="JS/chatbot.js"></script> <script src="JS/email-service.js"></script> <script src="JS/script.js"></script> </body> </html> 
+﻿﻿<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="fr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2.1 Architecte Solution** - FEA</title>
+    <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>FEA</h1>
+                <p>Filiére d'Excellence Architecture</p>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">Retour à l'index</a></li>
+                    <li><a href="#evaluation">Évaluation Technique</a></li>
+                    <li><a href="#fiche-poste">Fiche de Poste</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main-content"> <!-- Profil Header -->
+        <section class="profile-header-section">
+            <div class="container">
+                <div class="profile-header">
+                    <h1>2.1 Architecte Solution**</h1> <span class="badge available">Disponible</span>
+                </div>
+                <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#arch-si">2. Architecture
+                        SI</a> †’ <span>2.1 Architecte Solution**</span> </div>
+            </div>
+        </section> <!-- Section Évaluation Technique -->
+        <section id="evaluation" class="section">
+            <div class="container">
+                <h2>Évaluation Technique</h2>
+                <div class="competence-domain">
+                    <h3>Architecture & conception de solutions</h3>
+                    <p>Architecture orientée services / micro-services, API, middleware, intégration d'applications.
+                        Urbanisation du SI, cohérence fonctionnelle, applicative et infrastructure. Définition de la
+                        cible, trajectoire (roadmap) et arbitrages techniques.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Intégration & échanges inter-systémes</h3>
+                    <p>Bus de services (ESB), API Management, orchestration, messaging, data flows. Interopérabilité,
+                        gestion des données de référence (master data).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Technologies & stack technique</h3>
+                    <p>Java (Spring, Quarkus, Hibernate), frameworks backend. Front-end (React, HTML, CSS). Conteneurs &
+                        Kubernetes, Docker. Bases de données relationnelles & NoSQL (MariaDB, MongoDB).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>DevSecOps & infrastructure</h3>
+                    <p>Mise en place de chaé®nes CI/CD. Automatisation, Infrastructure as Code. Exigences de
+                        securité intégrées ("security by design"). Résilience, performance, scalabilité.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Modélisation & méthodologies</h3>
+                    <p>Modélisation (UML, BPMN, ArchiMate). Utilisation de référentiels d'architecture. Bonnes pratiques
+                        et patterns architecturaux. Méthodes agiles / SAFe.</p>
+                </div>
+            </div>
+        </section> <!-- Section Fiche de Poste -->
+        <section id="fiche-poste" class="section">
+            <div class="container">
+                <h2>Fiche de Poste pour Agent de talent</h2>
+                <div class="mission-description">
+                    <h3>Vous étes Architecte Solution SI et vous recherchez une mission en freelance ?</h3>
+                    <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
+                        assurances.</p>
+                </div>
+                <div class="mission-expectations">
+                    <h3>Ce que l'on attend de la personne (type de mission)</h3>
+                    <p>L'Architecte Solution est responsable de :</p>
+                    <ul>
+                        <li>Concevoir des solutions techniques cohérentes avec l'urbanisation du SI</li>
+                        <li>Définir la cible d'architecture, les trajectoires et les arbitrages techniques</li>
+                        <li>Assurer l'intégration inter-systé¨mes via API, ESB, messaging, data flows</li>
+                        <li>Mettre en Å“uvre des pratiques DevSecOps : CI/CD, automatisation, securité by design</li>
+                        <li>Modéliser les solutions (UML, BPMN, ArchiMate) et appliquer les bonnes pratiques</li>
+                        <li>Accompagner les projets de transformation SI dans des environnements é maturitàtechnique
+                            variable</li>
+                        <li>Animer des ateliers, coacher les équipes, vulgariser les choix techniques</li>
+                    </ul>
+                </div>
+                <div class="profile-requirements">
+                    <h3>Ce que la personne est (compétences attendues)</h3>
+                    <p>Un(e) Architecte Solution avec :</p>
+                    <ul>
+                        <li>Une maîtrise des architectures orientées services, micro-services, middleware</li>
+                        <li>Une expertise sur les technologies backend (Java, Spring, .NET, Quarkus), front-end (React),
+                            conteneurs (Docker, Kubernetes), bases de données (SQL/NoSQL)</li>
+                        <li>Une Capacitéchallenger les choix techniques et assurer la cohérence du SI</li>
+                        <li>Une connaissance des méthodes agiles / SAFe et des référentiels d'architecture</li>
+                        <li>Des qualités personnelles : autonomie, curiositàtechnologique, diplomatie, force de
+                            proposition, sens de la responsabilité</li>
+                    </ul>
+                </div>
+                <div class="rate-info">
+                    <h3>Taux Journalier Moyen (TJM)</h3>
+                    <p class="rate">600 é 750 ‚jour HT</p>
+                </div>
+                <div class="contact-section">
+                    <h3>Intéressé(e) par cette opportunità?</h3>
+                    <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn"
+                        class="contact-btn">Publier l'offre</button>
+                </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 FEA - Filière Architecture. Tous droits réservés.</p>
+        </div>
+    </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle"
+        class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg> <span class="chatbot-notification" id="chat-notification"></span> </button>
+    <!-- Conteneur du chatbot (cache par défaut) -->
+    <div id="chatbot-container">
+        <div class="chatbot-header">
+            <div class="header-content">
+                <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png"
+                        alt="Chatbot"> </div>
+                <div class="chatbot-info">
+                    <h3>Assistant FEA</h3>
+                    <p>En ligne</p>
+                </div>
+            </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                </svg> </button>
+        </div>
+        <div class="chatbot-messages" id="chat-messages">
+            <div class="welcome-message">
+                <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p>
+                <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre
+                    sujet liàé la Filière architecture.</p>
+            </div>
+        </div>
+        <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button
+                id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg> </button> </div>
+    </div>
+    <script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
+</body>
+
+</html>
