--- a/ingenieur-iam-workplace.html
+++ b/ingenieur-iam-workplace.html
@@ -1,1 +1,188 @@
-﻿﻿<!DOCTYPE html> <html lang="fr"> <head> <meta charset="utf-8"> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <meta http-equiv="Content-Language" content="fr"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>8.2 Ingénieur IAM (Identità& accé¨s) Poste de travail - FEA</title> <link rel="stylesheet" href="CSS/style.css"> </head> <body> <header class="header"> <div class="container"> <div class="logo"> <h1>FEA</h1> <p>Filié¨re d'Excelence Architecture</p> </div> <nav class="navigation"> <ul> <li><a href="index.html">† Retour é l'index</a></li> <li><a href="#evaluation">évaluation Technique</a></li> <li><a href="#fiche-poste">Fiche de Poste</a></li> </ul> </nav> </div> </header> <main class="main-content"> <!-- Profil Header --> <section class="profile-header-section"> <div class="container"> <div class="profile-header"> <h1>8.2 Ingénieur IAM (Identità& accé¨s) Poste de travail</h1> <span class="badge available">Disponible</span> </div> <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#workplace">8. Poste de travail (Digital Workplace)</a> †’ <span>8.2 Ingénieur IAM (Identità& accé¨s) Poste de travail</span> </div> </div> </section> <!-- Section évaluation Technique --> <section id="evaluation" class="section"> <div class="container"> <h2>évaluation Technique</h2> <div class="competence-domain"> <h3>Stratégie & gouvernance IAM</h3> <p>Participation é la définition de la politique IAM (principes d'accé¨s, ré´les, gouvernance). Définir les processus de demande / approbation / révocation d'accé¨s. Veiller é la conformità(audit des accé¨s, revues périodiques).</p> </div> <div class="competence-domain"> <h3>Cycle de vie des identités & gestion des droits</h3> <p>Provisioning / deprovisioning automatique. Gestion des modifications / révocations. Ré¨gles d'habilitation / ré´le (RBAC, ABAC). Segregation of Duties (SoD), audits de droits.</p> </div> <div class="competence-domain"> <h3>Technologies & plateformes IAM</h3> <p>Maé®trise de solutions IAM / IGA (ex : SailPoint, ForgeRock, Microsoft Entra, Okta, Ping). Intégration avec Active Directory / Azure AD / LDAP. Protocoles : OAuth2, OpenID Connect, SAML, SCIM.</p> </div> <div class="competence-domain"> <h3>Intégration & interopérabilité</h3> <p>Connecteurs vers applications internes / externes (API, web services). Synchronisation d'identités entre systé¨mes hétérogé¨nes. Automatisation via scripts / API.</p> </div> <div class="competence-domain"> <h3>Sécurità& conformité</h3> <p>Authentification forte (MFA, biométrie). Chiffrement des données d'identité. Traé§abilitàdes actions (logs). Respect du RGPD / contré´le des accé¨s.</p> </div> <div class="competence-domain"> <h3>Opérations & support IAM</h3> <p>Exploitation, maintenance & supervision de la plateforme IAM. Support incidents, escalade. Tests, mises é jour, correctifs et évolutions.</p> </div> <div class="competence-domain"> <h3>Automatisation & DevOps IAM</h3> <p>Infrastructure as Code pour le déploiement IAM. CI/CD pour les composants IAM. Scripting (Python, PowerShell, etc.).</p> </div> <div class="competence-domain"> <h3>Soft skills & communication</h3> <p>Collaboration entre sécurité, DSI et métiers. Animation d'ateliers IAM. Capacitàé vulgariser les sujets IAM aupré¨s de non spécialistes.</p> </div> </div> </section> <!-- Section Fiche de Poste --> <section id="fiche-poste" class="section"> <div class="container"> <h2>Fiche de Poste pour Agent de talent</h2> <div class="mission-description"> <h3>Vous étes Ingénieur Identitàet Accé¨s (Poste de travail) SI et vous recherchez une mission en freelance ?</h3> <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des assurances.</p> </div> <div class="mission-expectations"> <h3>Ce que l'on attend de la personne (missions)</h3> <p>L'ingénieur IAM est chargàde :</p> <ul> <li>Définir et mettre en Å“uvre la stratégie IAM : politiques d'accé¨s, gouvernance, processus de demande/approbation/révocation, conformitàet audits.</li> <li>Gérer le cycle de vie des identités : provisioning automatique, gestion des droits (RBAC, ABAC), audits et séparation des té¢ches (SoD).</li> <li>Intégrer et exploiter les plateformes IAM : solutions comme SailPoint, ForgeRock, Okta, Microsoft Entra, avec AD/Azure AD/LDAP.</li> <li>Assurer la sécuritàdes accé¨s : MFA, chiffrement, traé§abilité, conformitàRGPD.</li> <li>Superviser et maintenir les opérations IAM : support, mises é jour, correctifs, évolutions.</li> <li>Automatiser les processus IAM : scripting, Infrastructure as Code, CI/CD.</li> <li>Collaborer avec les métiers et la DSI : animation d'ateliers, vulgarisation des sujets IAM.</li> </ul> </div> <div class="profile-requirements"> <h3>Ce que la personne est (compétences)</h3> <p>Le profil recherchàest :</p> <ul> <li>Ingénieur expérimentà(3 é 5 ans ou plus) en IAM ou sécuritàdes accé¨s.</li> <li>Diplé´màBac+5 en informatique ou cybersécurité.</li> <li>Maé®trise des solutions IAM / IGA et des protocoles d'authentification (OAuth2, SAML, OpenID Connect, SCIM).</li> <li>Compétent en scripting (Python, PowerShell), automatisation et DevOps.</li> <li>Connaissance approfondie des environnements Microsoft (AD, Azure AD).</li> <li>Dotàde soft skills : communication transverse, pédagogie, capacitàé animer et convaincre.</li> <li>Certifications IAM ou sécuritàappréciées.</li> </ul> </div> <div class="rate-info"> <h3>Taux Journalier Moyen (TJM)</h3> <p class="rate">500 é 650 ‚¬/jour HT</p> </div> <div class="contact-section"> <h3>Intéressé(e) par cette opportunità?</h3> <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn" class="contact-btn">Publier l'offre</button> </div> </div> </section> </main> <footer class="footer"> <div class="container"> <p>&copy; 2025 FEA - Filié¨re Architecture. Tous droits réservés.</p> </div> </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle" class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> <span class="chatbot-notification" id="chat-notification"></span> </button> <!-- Conteneur du chatbot (cachàpar défaut) --> <div id="chatbot-container"> <div class="chatbot-header"> <div class="header-content"> <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot"> </div> <div class="chatbot-info"> <h3>Assistant FEA</h3> <p>En ligne</p> </div> </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"> <line x1="5" y1="12" x2="19" y2="12"></line> </svg> </button> </div> <div class="chatbot-messages" id="chat-messages"> <div class="welcome-message"> <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p> <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre sujet liàé la filié¨re architecture.</p> </div> </div> <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> </button> </div> </div> <script src="JS/chatbot.js"></script> <script src="JS/email-service.js"></script> <script src="JS/script.js"></script> </body> </html> 
+﻿﻿<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="fr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>8.2 Ingénieur IAM (Identità& accé¨s) Poste de travail - FEA</title>
+    <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>FEA</h1>
+                <p>Filière d'Excellence Architecture</p>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">› Retour à l'index</a></li>
+                    <li><a href="#evaluation">Évaluation Technique</a></li>
+                    <li><a href="#fiche-poste">Fiche de Poste</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main-content"> <!-- Profil Header -->
+        <section class="profile-header-section">
+            <div class="container">
+                <div class="profile-header">
+                    <h1>8.2 Ingénieur IAM (Identità& accé¨s) Poste de travail</h1> <span
+                        class="badge available">Disponible</span>
+                </div>
+                <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#workplace">8. Poste de
+                        travail (Digital Workplace)</a> †’ <span>8.2 Ingénieur IAM (Identità& accé¨s) Poste de
+                        travail</span> </div>
+            </div>
+        </section> <!-- Section Évaluation Technique -->
+        <section id="evaluation" class="section">
+            <div class="container">
+                <h2>Évaluation Technique</h2>
+                <div class="competence-domain">
+                    <h3>Stratégie & gouvernance IAM</h3>
+                    <p>Participation é la définition de la politique IAM (principes d'accé¨s, ré´les, gouvernance).
+                        Définir les processus de demande / approbation / révocation d'accé¨s. veiller a  la
+                        conformità(audit des accé¨s, revues périodiques).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Cycle de vie des identités & gestion des droits</h3>
+                    <p>Provisioning / deprovisioning automatique. Gestion des modifications / révocations. Ré¨gles
+                        d'habilitation / ré´le (RBAC, ABAC). Segregation of Duties (SoD), audits de droits.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Technologies & plateformes IAM</h3>
+                    <p>maîtrise de solutions IAM / IGA (ex : SailPoint, ForgeRock, Microsoft Entra, Okta, Ping).
+                        Intégration avec Active Directory / Azure AD / LDAP. Protocoles : OAuth2, OpenID Connect, SAML,
+                        SCIM.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Intégration & interopérabilité</h3>
+                    <p>Connecteurs vers applications internes / externes (API, web services). Synchronisation
+                        d'identités entre systé¨mes hétérogé¨nes. Automatisation via scripts / API.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>securité & conformité</h3>
+                    <p>Authentification forte (MFA, biométrie). Chiffrement des données d'identité. Traé§abilitàdes
+                        actions (logs). Respect du RGPD / contré´le des accé¨s.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Opérations & support IAM</h3>
+                    <p>Exploitation, maintenance & supervision de la plateforme IAM. Support incidents, escalade. Tests,
+                        mises é jour, correctifs et évolutions.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Automatisation & DevOps IAM</h3>
+                    <p>Infrastructure as Code pour le déploiement IAM. CI/CD pour les composants IAM. Scripting (Python,
+                        PowerShell, etc.).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Soft skills & communication</h3>
+                    <p>Collaboration entre sécurité, DSI et métiers. Animation d'ateliers IAM. Capacitévulgariser les
+                        sujets IAM aupré¨s de non spécialistes.</p>
+                </div>
+            </div>
+        </section> <!-- Section Fiche de Poste -->
+        <section id="fiche-poste" class="section">
+            <div class="container">
+                <h2>Fiche de Poste pour Agent de talent</h2>
+                <div class="mission-description">
+                    <h3>Vous étes Ingénieur Identitàet Accé¨s (Poste de travail) SI et vous recherchez une mission en
+                        freelance ?</h3>
+                    <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
+                        assurances.</p>
+                </div>
+                <div class="mission-expectations">
+                    <h3>Ce que l'on attend de la personne (missions)</h3>
+                    <p>L'ingénieur IAM est chargàde :</p>
+                    <ul>
+                        <li>Définir et mettre en Å“uvre la stratégie IAM : politiques d'accé¨s, gouvernance, processus
+                            de demande/approbation/révocation, conformitàet audits.</li>
+                        <li>Gérer le cycle de vie des identités : provisioning automatique, gestion des droits (RBAC,
+                            ABAC), audits et séparation des té¢ches (SoD).</li>
+                        <li>Intégrer et exploiter les plateformes IAM : solutions comme SailPoint, ForgeRock, Okta,
+                            Microsoft Entra, avec AD/Azure AD/LDAP.</li>
+                        <li>Assurer la securité des accé¨s : MFA, chiffrement, traé§abilité, conformitàRGPD.</li>
+                        <li>Superviser et maintenir les opérations IAM : support, mises é jour, correctifs, évolutions.
+                        </li>
+                        <li>Automatiser les processus IAM : scripting, Infrastructure as Code, CI/CD.</li>
+                        <li>Collaborer avec les métiers et la DSI : animation d'ateliers, vulgarisation des sujets IAM.
+                        </li>
+                    </ul>
+                </div>
+                <div class="profile-requirements">
+                    <h3>Ce que la personne est (compétences)</h3>
+                    <p>Le profil recherchàest :</p>
+                    <ul>
+                        <li>Ingénieur expérimentà(3 é 5 ans ou plus) en IAM ou securité des accé¨s.</li>
+                        <li>Diplômé Bac+5 en informatique ou cybersécurité.</li>
+                        <li>maîtrise des solutions IAM / IGA et des protocoles d'authentification (OAuth2, SAML, OpenID
+                            Connect, SCIM).</li>
+                        <li>Compétent en scripting (Python, PowerShell), automatisation et DevOps.</li>
+                        <li>Connaissance approfondie des environnements Microsoft (AD, Azure AD).</li>
+                        <li>Doté de soft skills : communication transverse, pédagogie, Capacitéanimer et convaincre.
+                        </li>
+                        <li>Certifications IAM ou securité appréciées.</li>
+                    </ul>
+                </div>
+                <div class="rate-info">
+                    <h3>Taux Journalier Moyen (TJM)</h3>
+                    <p class="rate">500 à 600 Euro ‚jour HT</p>
+                </div>
+                <div class="contact-section">
+                    <h3>Intéressé(e) par cette opportunità?</h3>
+                    <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn"
+                        class="contact-btn">Publier l'offre</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 FEA - Filière Architecture. Tous droits réservés.</p>
+        </div>
+    </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle"
+        class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg> <span class="chatbot-notification" id="chat-notification"></span> </button>
+    <!-- Conteneur du chatbot (cachàpar défaut) -->
+    <div id="chatbot-container">
+        <div class="chatbot-header">
+            <div class="header-content">
+                <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png"
+                        alt="Chatbot"> </div>
+                <div class="chatbot-info">
+                    <h3>Assistant FEA</h3>
+                    <p>En ligne</p>
+                </div>
+            </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                </svg> </button>
+        </div>
+        <div class="chatbot-messages" id="chat-messages">
+            <div class="welcome-message">
+                <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p>
+                <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre
+                    sujet liàé la Filière architecture.</p>
+            </div>
+        </div>
+        <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button
+                id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg> </button> </div>
+    </div>
+    <script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
+</body>
+
+</html>
