--- a/lead-tech.html
+++ b/lead-tech.html
@@ -1,1 +1,169 @@
-﻿﻿<!DOCTYPE html> <html lang="fr"> <head> <meta charset="utf-8"> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <meta http-equiv="Content-Language" content="fr"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>2.3 Lead Tech** - FEA</title> <link rel="stylesheet" href="CSS/style.css"> </head> <body> <header class="header"> <div class="container"> <div class="logo"> <h1>FEA</h1> <p>Filié¨re d'Excelence Architecture</p> </div> <nav class="navigation"> <ul> <li><a href="index.html">† Retour é l'index</a></li> <li><a href="#evaluation">évaluation Technique</a></li> <li><a href="#fiche-poste">Fiche de Poste</a></li> </ul> </nav> </div> </header> <main class="main-content"> <!-- Profil Header --> <section class="profile-header-section"> <div class="container"> <div class="profile-header"> <h1>2.3 Lead Tech**</h1> <span class="badge available">Disponible</span> </div> <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#arch-si">2. Architecture SI</a> †’ <span>2.3 Lead Tech**</span> </div> </div> </section> <!-- Section évaluation Technique --> <section id="evaluation" class="section"> <div class="container"> <h2>évaluation Technique</h2> <div class="competence-domain"> <h3>Expertise technique & stack</h3> <p>Maé®trise d'un ou plusieurs langages backend (Java / Spring, Node.js, etc.). Connaissance du front-end moderne (React, Angular). API REST, micro-services, ORM, interfaé§age. Utilisation de technologies conteneurisées (Docker, Kubernetes). Expérience avec les outils CI/CD (Jenkins, GitLab CI, GitHub Actions). Bonne pratique de tests automatisés, qualitàde code, revue de code.</p> </div> <div class="competence-domain"> <h3>Architecture & choix techniques</h3> <p>Capacitàé définir / challenger les choix d'architecture. Conception de solutions évolutives, scalables, résilientes. Dimension cloud (Azure, AWS, GCP) et intégration hybride. Arbitrages entre performance / coé»t / sécurité.</p> </div> <div class="competence-domain"> <h3>Leadership & encadrement</h3> <p>Encadrement technique d'équipes (junior / intermédiaires). Mentorat, montée en compétences. Animation de revues techniques, points d'équipe. Capacitàé fédérer autour de bonnes pratiques.</p> </div> <div class="competence-domain"> <h3>Communication & relation client</h3> <p>Interface avec les parties prenantes (métiers, DSI, clients). Animation d'ateliers, restitution de solutions. Vulgarisation technique, capacitàé convaincre. Posture de conseil, autonomie dans les décisions.</p> </div> </div> </section> <!-- Section Fiche de Poste --> <section id="fiche-poste" class="section"> <div class="container"> <h2>Fiche de Poste pour Agent de talent</h2> <div class="mission-description"> <h3>Vous étes TechLead SI et vous recherchez une mission en freelance ?</h3> <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des assurances.</p> </div> <div class="mission-expectations"> <h3>Ce que l'on attend de la personne (type de mission)</h3> <p>Le Lead Tech est responsable de :</p> <ul> <li>Piloter techniquement les projets de bout en bout, du cadrage é la mise en production</li> <li>Définir et challenger les choix d'architecture, en tenant compte des enjeux de performance, coé»t et sécurité</li> <li>Encadrer les équipes techniques, assurer leur montée en compétences et animer les revues de code</li> <li>Participer aux sprints, planifier et prioriser les té¢ches techniques</li> <li>Assurer la qualitàdu code, la gestion de la dette technique et le respect des bonnes pratiques</li> <li>Interfacer avec les parties prenantes (DSI, métiers, clients) et restituer les solutions</li> </ul> </div> <div class="profile-requirements"> <h3>Ce que la personne est (compétences attendues)</h3> <p>Un(e) Lead Tech confirmé(e) avec :</p> <ul> <li>Une maé®trise des stacks backend (Java/Spring, Node.js), front-end (React, Angular), CI/CD (Jenkins, GitLab CI), conteneurs (Docker, Kubernetes)</li> <li>Une expérience solide (5 é 7 ans+), dont plusieurs années en lead technique</li> <li>Une capacitàé concevoir des solutions évolutives, scalables et sécurisées, intégrées au cloud (Azure, AWS, GCP)</li> <li>Des soft skills affirmés : rigueur, esprit collaboratif, curiosité, autonomie, sens du service</li> <li>Une posture de conseil, capable de vulgariser les enjeux techniques et de fédérer les équipes</li> <li>Une adaptabilitàaux environnements assurantiels ou techniques complexes, avec présence locale partielle (Niort ou région)</li> </ul> </div> <div class="rate-info"> <h3>Taux Journalier Moyen (TJM)</h3> <p class="rate">500 é 650 ‚¬/jour HT</p> </div> <div class="contact-section"> <h3>Intéressé(e) par cette opportunità?</h3> <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn" class="contact-btn">Publier l'offre</button> </div> </div> </section> </main> <footer class="footer"> <div class="container"> <p>&copy; 2025 FEA - Filié¨re Architecture. Tous droits réservés.</p> </div> </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle" class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> <span class="chatbot-notification" id="chat-notification"></span> </button> <!-- Conteneur du chatbot (cachàpar défaut) --> <div id="chatbot-container"> <div class="chatbot-header"> <div class="header-content"> <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot"> </div> <div class="chatbot-info"> <h3>Assistant FEA</h3> <p>En ligne</p> </div> </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"> <line x1="5" y1="12" x2="19" y2="12"></line> </svg> </button> </div> <div class="chatbot-messages" id="chat-messages"> <div class="welcome-message"> <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p> <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre sujet liàé la filié¨re architecture.</p> </div> </div> <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> </button> </div> </div> <script src="JS/chatbot.js"></script> <script src="JS/email-service.js"></script> <script src="JS/script.js"></script> </body> </html> 
+﻿﻿<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="fr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>2.3 Lead Tech** - FEA</title>
+    <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>FEA</h1>
+                <p>Filière d'Excellence Architecture</p>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">› Retour à l'index</a></li>
+                    <li><a href="#evaluation">Évaluation Technique</a></li>
+                    <li><a href="#fiche-poste">Fiche de Poste</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main-content"> <!-- Profil Header -->
+        <section class="profile-header-section">
+            <div class="container">
+                <div class="profile-header">
+                    <h1>2.3 Lead Tech**</h1> <span class="badge available">Disponible</span>
+                </div>
+                <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#arch-si">2. Architecture
+                        SI</a> †’ <span>2.3 Lead Tech**</span> </div>
+            </div>
+        </section> <!-- Section Évaluation Technique -->
+        <section id="evaluation" class="section">
+            <div class="container">
+                <h2>Évaluation Technique</h2>
+                <div class="competence-domain">
+                    <h3>Expertise technique & stack</h3>
+                    <p>maîtrise d'un ou plusieurs langages backend (Java / Spring, Node.js, etc.). Connaissance du
+                        front-end moderne (React, Angular). API REST, micro-services, ORM, Interfaçage. Utilisation de
+                        technologies conteneurisées (Docker, Kubernetes). Expérience avec les outils CI/CD (Jenkins,
+                        GitLab CI, GitHub Actions). Bonne pratique de tests automatisés, qualitàde code, revue de code.
+                    </p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Architecture & choix techniques</h3>
+                    <p>Capacitédéfinir / challenger les choix d'architecture. Conception de solutions évolutives,
+                        scalables, résilientes. Dimension cloud (Azure, AWS, GCP) et intégration hybride. Arbitrages
+                        entre performance / coé»t / sécurité.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Leadership & encadrement</h3>
+                    <p>Encadrement technique d'équipes (junior / intermédiaires). Mentorat, montée en compétences.
+                        Animation de revues techniques, points d'équipe. Capacitéfédérer autour de bonnes pratiques.
+                    </p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Communication & relation client</h3>
+                    <p>Interface avec les parties prenantes (métiers, DSI, clients). Animation d'ateliers, restitution
+                        de solutions. Vulgarisation technique, Capacitéconvaincre. Posture de conseil, autonomie dans
+                        les décisions.</p>
+                </div>
+            </div>
+        </section> <!-- Section Fiche de Poste -->
+        <section id="fiche-poste" class="section">
+            <div class="container">
+                <h2>Fiche de Poste pour Agent de talent</h2>
+                <div class="mission-description">
+                    <h3>Vous étes TechLead SI et vous recherchez une mission en freelance ?</h3>
+                    <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
+                        assurances.</p>
+                </div>
+                <div class="mission-expectations">
+                    <h3>Ce que l'on attend de la personne (type de mission)</h3>
+                    <p>Le Lead Tech est responsable de :</p>
+                    <ul>
+                        <li>Piloter techniquement les projets de bout en bout, du cadrage é la mise en production</li>
+                        <li>Définir et challenger les choix d'architecture, en tenant compte des enjeux de performance,
+                            coé»t et sécurité</li>
+                        <li>Encadrer les équipes techniques, assurer leur montée en compétences et animer les revues de
+                            code</li>
+                        <li>Participer aux sprints, planifier et prioriser les té¢ches techniques</li>
+                        <li>Assurer la qualitàdu code, la gestion de la dette technique et le respect des bonnes
+                            pratiques</li>
+                        <li>Interfacer avec les parties prenantes (DSI, métiers, clients) et restituer les solutions
+                        </li>
+                    </ul>
+                </div>
+                <div class="profile-requirements">
+                    <h3>Ce que la personne est (compétences attendues)</h3>
+                    <p>Un(e) Lead Tech confirmé(e) avec :</p>
+                    <ul>
+                        <li>Une maîtrise des stacks backend (Java/Spring, Node.js), front-end (React, Angular), CI/CD
+                            (Jenkins, GitLab CI), conteneurs (Docker, Kubernetes)</li>
+                        <li>Une expérience solide (5 é 7 ans+), dont plusieurs années en lead technique</li>
+                        <li>Une Capacitéconcevoir des solutions évolutives, scalables et sécurisées, intégrées au
+                            cloud (Azure, AWS, GCP)</li>
+                        <li>Des soft skills affirmés : rigueur, esprit collaboratif, curiosité, autonomie, sens du
+                            service</li>
+                        <li>Une posture de conseil, capable de vulgariser les enjeux techniques et de fédérer les
+                            équipes</li>
+                        <li>Une adaptabilitàaux environnements assurantiels ou techniques complexes, avec présence
+                            locale partielle (Niort ou région)</li>
+                    </ul>
+                </div>
+                <div class="rate-info">
+                    <h3>Taux Journalier Moyen (TJM)</h3>
+                    <p class="rate">500 Euro‚jour HT</p>
+                </div>
+                <div class="contact-section">
+                    <h3>Intéressé(e) par cette opportunità?</h3>
+                    <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn"
+                        class="contact-btn">Publier l'offre</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 FEA - Filière Architecture. Tous droits réservés.</p>
+        </div>
+    </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle"
+        class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg> <span class="chatbot-notification" id="chat-notification"></span> </button>
+    <!-- Conteneur du chatbot (cachàpar défaut) -->
+    <div id="chatbot-container">
+        <div class="chatbot-header">
+            <div class="header-content">
+                <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png"
+                        alt="Chatbot"> </div>
+                <div class="chatbot-info">
+                    <h3>Assistant FEA</h3>
+                    <p>En ligne</p>
+                </div>
+            </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                </svg> </button>
+        </div>
+        <div class="chatbot-messages" id="chat-messages">
+            <div class="welcome-message">
+                <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p>
+                <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre
+                    sujet liàé la Filière architecture.</p>
+            </div>
+        </div>
+        <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button
+                id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg> </button> </div>
+    </div>
+    <script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
+</body>
+
+</html>
