--- a/ingenieur-data.html
+++ b/ingenieur-data.html
@@ -1,1 +1,178 @@
-﻿﻿<!DOCTYPE html> <html lang="fr"> <head> <meta charset="utf-8"> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <meta http-equiv="Content-Language" content="fr"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>6.2 Ingénieur Data - FEA</title> <link rel="stylesheet" href="CSS/style.css"> </head> <body> <header class="header"> <div class="container"> <div class="logo"> <h1>FEA</h1> <p>Filié¨re d'Excelence Architecture</p> </div> <nav class="navigation"> <ul> <li><a href="index.html">† Retour é l'index</a></li> <li><a href="#evaluation">évaluation Technique</a></li> <li><a href="#fiche-poste">Fiche de Poste</a></li> </ul> </nav> </div> </header> <main class="main-content"> <!-- Profil Header --> <section class="profile-header-section"> <div class="container"> <div class="profile-header"> <h1>6.2 Ingénieur Data</h1> <span class="badge available">Disponible</span> </div> <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#data">6. Data & IA</a> †’ <span>6.2 Ingénieur Data</span> </div> </div> </section> <!-- Section évaluation Technique --> <section id="evaluation" class="section"> <div class="container"> <h2>évaluation Technique</h2> <div class="competence-domain"> <h3>Architecture & conception de données</h3> <p>Définir et concevoir des modé¨les de données (conceptuel, logique, physique). Concevoir des pipelines de données robustes (ETL / ELT). Pensée modulaire, architecture data scalable.</p> </div> <div class="competence-domain"> <h3>Ingestion & traitement des données</h3> <p>Traitement par lots (batch) et temps réel / streaming. Connecteurs vers diverses sources (bases, API, fichiers, logs). Transformation, nettoyage, enrichissement des données.</p> </div> <div class="competence-domain"> <h3>Technologies & outils data</h3> <p>Maé®trise de technologies Big Data (Spark, Hadoop, etc.). Bases relationnelles & NoSQL. Technologies modernes de stockage (Data Lake, Data Warehouse, Lakehouse). Frameworks de données (ex. Apache Kafka, Flink, etc.).</p> </div> <div class="competence-domain"> <h3>Cloud & plateforme data</h3> <p>Expérience sur cloud (Azure, AWS, GCP). Intégration des services managés de données. Architectures hybrides ou cloud-native.</p> </div> <div class="competence-domain"> <h3>Performance, scalabilità& optimisation</h3> <p>Optimisation des requétes, index, partitionnement. Gestion de la volumétrie et montée en charge. Stratégies de caching, agrégation, mise en mémoire tampon.</p> </div> <div class="competence-domain"> <h3>Sécurità& gouvernance des données</h3> <p>Masquage des données sensibles. Gestion des accé¨s / droits aux données (IAM). Conformitàréglementaire (RGPD).</p> </div> <div class="competence-domain"> <h3>Déploiement & opérationnalisation</h3> <p>Automatisation des pipelines. Intégration dans les flux CI/CD. Monitoring / supervision des pipelines. Maintenance, résilience, reprise sur incident.</p> </div> <div class="competence-domain"> <h3>Collaboration & relation métier</h3> <p>Traduction des besoins métiers en solutions techniques. Ateliers avec parties prenantes. Documentation, restitution aux non-techniciens.</p> </div> </div> </section> <!-- Section Fiche de Poste --> <section id="fiche-poste" class="section"> <div class="container"> <h2>Fiche de Poste pour Agent de talent</h2> <div class="mission-description"> <h3>Vous étes Ingénieur Data SI et vous recherchez une mission en freelance ?</h3> <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des assurances.</p> </div> <div class="mission-expectations"> <h3>Ce que l'on attend de la personne (type de mission)</h3> <p>L'Ingénieur Data est chargàde :</p> <ul> <li>Concevoir des modé¨les de données et des pipelines robustes (ETL/ELT)</li> <li>Assurer l'ingestion et le traitement des données en batch et streaming</li> <li>Utiliser les technologies Big Data (Spark, Hadoop, Kafka€¦) et les plateformes cloud (AWS, Azure, GCP)</li> <li>Optimiser la performance et la scalabilitàdes architectures data</li> <li>Automatiser les déploiements et intégrer les pipelines dans les flux CI/CD</li> <li>Garantir la sécuritàet la conformitàdes données (RGPD, IAM)</li> <li>Collaborer avec les métiers pour traduire les besoins en solutions techniques</li> </ul> </div> <div class="profile-requirements"> <h3>Ce que la personne est (compétences attendues)</h3> <p>Un(e) Ingénieur(e) Data avec :</p> <ul> <li>Une formation supérieure en informatique, data ou ingénierie</li> <li>Une expérience de 3 é 5 ans ou plus en data engineering</li> <li>Une maé®trise des outils et technologies data : bases relationnelles/NoSQL, Data Lake, Data Warehouse, Kafka, Flink€¦</li> <li>Des compétences en cloud, automatisation, CI/CD, monitoring</li> <li>Des qualités personnelles : autonomie, rigueur, curiosité, communication claire</li> <li>Une capacitàé prioriser les contraintes techniques et é travailler en équipe</li> </ul> </div> <div class="rate-info"> <h3>Taux Journalier Moyen (TJM)</h3> <p class="rate">500 é 650 ‚¬/jour HT</p> </div> <div class="contact-section"> <h3>Intéressé(e) par cette opportunità?</h3> <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn" class="contact-btn">Publier l'offre</button> </div> </div> </section> </main> <footer class="footer"> <div class="container"> <p>&copy; 2025 FEA - Filié¨re Architecture. Tous droits réservés.</p> </div> </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle" class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> <span class="chatbot-notification" id="chat-notification"></span> </button> <!-- Conteneur du chatbot (cachàpar défaut) --> <div id="chatbot-container"> <div class="chatbot-header"> <div class="header-content"> <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot"> </div> <div class="chatbot-info"> <h3>Assistant FEA</h3> <p>En ligne</p> </div> </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"> <line x1="5" y1="12" x2="19" y2="12"></line> </svg> </button> </div> <div class="chatbot-messages" id="chat-messages"> <div class="welcome-message"> <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p> <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre sujet liàé la filié¨re architecture.</p> </div> </div> <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> </button> </div> </div> <script src="JS/chatbot.js"></script> <script src="JS/email-service.js"></script> <script src="JS/script.js"></script> </body> </html> 
+﻿﻿<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="fr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>6.2 Ingénieur Data - FEA</title>
+    <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>FEA</h1>
+                <p>Filière d'Excellence Architecture</p>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">› Retour à l'index</a></li>
+                    <li><a href="#evaluation">Évaluation Technique</a></li>
+                    <li><a href="#fiche-poste">Fiche de Poste</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main-content"> <!-- Profil Header -->
+        <section class="profile-header-section">
+            <div class="container">
+                <div class="profile-header">
+                    <h1>6.2 Ingénieur Data</h1> <span class="badge available">Disponible</span>
+                </div>
+                <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#data">6. Data & IA</a> †’
+                    <span>6.2 Ingénieur Data</span> </div>
+            </div>
+        </section> <!-- Section Évaluation Technique -->
+        <section id="evaluation" class="section">
+            <div class="container">
+                <h2>Évaluation Technique</h2>
+                <div class="competence-domain">
+                    <h3>Architecture & conception de données</h3>
+                    <p>Définir et concevoir des modé¨les de données (conceptuel, logique, physique). Concevoir des
+                        pipelines de données robustes (ETL / ELT). Pensée modulaire, architecture data scalable.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Ingestion & traitement des données</h3>
+                    <p>Traitement par lots (batch) et temps réel / streaming. Connecteurs vers diverses sources (bases,
+                        API, fichiers, logs). Transformation, nettoyage, enrichissement des données.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Technologies & outils data</h3>
+                    <p>maîtrise de technologies Big Data (Spark, Hadoop, etc.). Bases relationnelles & NoSQL.
+                        Technologies modernes de stockage (Data Lake, Data Warehouse, Lakehouse). Frameworks de données
+                        (ex. Apache Kafka, Flink, etc.).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Cloud & plateforme data</h3>
+                    <p>Expérience sur cloud (Azure, AWS, GCP). Intégration des services managés de données.
+                        Architectures hybrides ou cloud-native.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Performance, scalabilità& optimisation</h3>
+                    <p>Optimisation des requétes, index, partitionnement. Gestion de la volumétrie et montée en charge.
+                        Stratégies de caching, agrégation, mise en mémoire tampon.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>securité & gouvernance des données</h3>
+                    <p>Masquage des données sensibles. Gestion des accé¨s / droits aux données (IAM).
+                        Conformitàréglementaire (RGPD).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Déploiement & opérationnalisation</h3>
+                    <p>Automatisation des pipelines. Intégration dans les flux CI/CD. Monitoring / supervision des
+                        pipelines. Maintenance, résilience, reprise sur incident.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Collaboration & relation métier</h3>
+                    <p>Traduction des besoins métiers en solutions techniques. Ateliers avec parties prenantes.
+                        Documentation, restitution aux non-techniciens.</p>
+                </div>
+            </div>
+        </section> <!-- Section Fiche de Poste -->
+        <section id="fiche-poste" class="section">
+            <div class="container">
+                <h2>Fiche de Poste pour Agent de talent</h2>
+                <div class="mission-description">
+                    <h3>Vous étes Ingénieur Data SI et vous recherchez une mission en freelance ?</h3>
+                    <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
+                        assurances.</p>
+                </div>
+                <div class="mission-expectations">
+                    <h3>Ce que l'on attend de la personne (type de mission)</h3>
+                    <p>L'Ingénieur Data est chargàde :</p>
+                    <ul>
+                        <li>Concevoir des modé¨les de données et des pipelines robustes (ETL/ELT)</li>
+                        <li>Assurer l'ingestion et le traitement des données en batch et streaming</li>
+                        <li>Utiliser les technologies Big Data (Spark, Hadoop, Kafka€¦) et les plateformes cloud (AWS,
+                            Azure, GCP)</li>
+                        <li>Optimiser la performance et la scalabilitàdes architectures data</li>
+                        <li>Automatiser les déploiements et intégrer les pipelines dans les flux CI/CD</li>
+                        <li>Garantir la securité et la Conformité données (RGPD, IAM)</li>
+                        <li>Collaborer avec les métiers pour traduire les besoins en solutions techniques</li>
+                    </ul>
+                </div>
+                <div class="profile-requirements">
+                    <h3>Ce que la personne est (compétences attendues)</h3>
+                    <p>Un(e) Ingénieur(e) Data avec :</p>
+                    <ul>
+                        <li>Une formation supérieure en informatique, data ou ingénierie</li>
+                        <li>Une expérience de 3 é 5 ans ou plus en data engineering</li>
+                        <li>Une maîtrise des outils et technologies data : bases relationnelles/NoSQL, Data Lake, Data
+                            Warehouse, Kafka, Flink€¦</li>
+                        <li>Des compétences en cloud, automatisation, CI/CD, monitoring</li>
+                        <li>Des qualités personnelles : autonomie, rigueur, curiosité, communication claire</li>
+                        <li>Une Capacitéprioriser les contraintes techniques et é travailler en équipe</li>
+                    </ul>
+                </div>
+                <div class="rate-info">
+                    <h3>Taux Journalier Moyen (TJM)</h3>
+                    <p class="rate">500 à jour HT‚jour HT</p>
+                </div>
+                <div class="contact-section">
+                    <h3>Intéressé(e) par cette opportunità?</h3>
+                    <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn"
+                        class="contact-btn">Publier l'offre</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 FEA - Filière Architecture. Tous droits réservés.</p>
+        </div>
+    </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle"
+        class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg> <span class="chatbot-notification" id="chat-notification"></span> </button>
+    <!-- Conteneur du chatbot (cachàpar défaut) -->
+    <div id="chatbot-container">
+        <div class="chatbot-header">
+            <div class="header-content">
+                <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png"
+                        alt="Chatbot"> </div>
+                <div class="chatbot-info">
+                    <h3>Assistant FEA</h3>
+                    <p>En ligne</p>
+                </div>
+            </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                </svg> </button>
+        </div>
+        <div class="chatbot-messages" id="chat-messages">
+            <div class="welcome-message">
+                <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p>
+                <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre
+                    sujet liàé la Filière architecture.</p>
+            </div>
+        </div>
+        <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button
+                id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg> </button> </div>
+    </div>
+    <script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
+</body>
+
+</html>
