--- a/ingenieur-mlops.html
+++ b/ingenieur-mlops.html
@@ -1,1 +1,190 @@
-﻿﻿<!DOCTYPE html> <html lang="fr"> <head> <meta charset="utf-8"> <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <meta http-equiv="Content-Language" content="fr"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>6.3 Ingénieur MLOps (Opération pour apprentissage automatique) - FEA</title> <link rel="stylesheet" href="CSS/style.css"> </head> <body> <header class="header"> <div class="container"> <div class="logo"> <h1>FEA</h1> <p>Filié¨re d'Excelence Architecture</p> </div> <nav class="navigation"> <ul> <li><a href="index.html">† Retour é l'index</a></li> <li><a href="#evaluation">évaluation Technique</a></li> <li><a href="#fiche-poste">Fiche de Poste</a></li> </ul> </nav> </div> </header> <main class="main-content"> <!-- Profil Header --> <section class="profile-header-section"> <div class="container"> <div class="profile-header"> <h1>6.3 Ingénieur MLOps (Opération pour apprentissage automatique)</h1> <span class="badge available">Disponible</span> </div> <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#data">6. Data & IA</a> †’ <span>6.3 Ingénieur MLOps (Opération pour apprentissage automatique)</span> </div> </div> </section> <!-- Section évaluation Technique --> <section id="evaluation" class="section"> <div class="container"> <h2>évaluation Technique</h2> <div class="competence-domain"> <h3>Cycle de vie des modé¨les & pipelines MLOps</h3> <p>Conception et automatisation de pipelines ML (entraé®nement, validation, déploiement). Gestion du versioning des modé¨les (model registry, tracking). Orchestration de workflows (Airflow, Kubeflow, MLFlow, Prefect, etc.).</p> </div> <div class="competence-domain"> <h3>Déploiement & serving des modé¨les</h3> <p>Packaging des modé¨les (Docker, ONNX, etc.). Mise en production : API serving, batch scoring, inference. Stratégies de déploiement (canary, blue/green, A/B). Scalabilité, haute disponibilité, gestion des latences.</p> </div> <div class="competence-domain"> <h3>Infrastructure, conteneurs & cloud</h3> <p>Infrastructure as Code (Terraform, CloudFormation, Ansible). Containers & orchestration (Docker, Kubernetes). Expérience cloud (AWS, Azure, GCP) et environnements hybrides. Conception des clusters, autoscaling, optimisation des ressources.</p> </div> <div class="competence-domain"> <h3>Monitoring, observabilità& détection de dérive</h3> <p>Métriques de performance des modé¨les (accuracy, drift, latence). Instrumentation : logs, traces, alertes. Détection des dérives, recalibration régulié¨re. Dashboards (Grafana, Kibana, Prometheus, etc.).</p> </div> <div class="competence-domain"> <h3>Sécurità& conformitàML / IA</h3> <p>Sécuritàdes modé¨les et des données (chiffrement, accé¨s contré´lé). Respect de la confidentialité, RGPD, anonymisation. Auditabilitàet traé§abilitàdes modé¨les. Robustesse (adversarial, validation).</p> </div> <div class="competence-domain"> <h3>Intégration & interopérabilité</h3> <p>Connecteurs vers les systé¨mes existants (bases de données, API métier, flux de données). Interopérabilitàentre modules de pipeline et services. Synchronisation entre pipelines ML et pipelines d'ingénierie / devops.</p> </div> <div class="competence-domain"> <h3>Automatisation & DevOps / DevSecOps</h3> <p>Automatisation des tests de modé¨les (unitaires, intégration). CI/CD pour pipelines ML. Intégration avec les outils DevOps de l'organisation. Scripting (Python, Bash, etc.).</p> </div> <div class="competence-domain"> <h3>Collaboration & interface Data / ML / IT</h3> <p>Travail rapprochàavec les data scientists pour industrialiser leurs prototypes. Dialogue avec les équipes infrastructure / ops pour déploiement. Vulgarisation des enjeux ML devant des non spécialistes.</p> </div> </div> </section> <!-- Section Fiche de Poste --> <section id="fiche-poste" class="section"> <div class="container"> <h2>Fiche de Poste pour Agent de talent</h2> <div class="mission-description"> <h3>Vous étes Ingénieur MLOPS SI et vous recherchez une mission en freelance ?</h3> <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des assurances.</p> </div> <div class="mission-expectations"> <h3>Ce que l'on attend de la personne (type de mission)</h3> <p>L'Ingénieur MLOps est chargàde :</p> <ul> <li>Concevoir et automatiser les pipelines ML : entraé®nement, validation, déploiement</li> <li>Gérer le cycle de vie des modé¨les : versioning, orchestration, serving (API, batch, inference)</li> <li>Déployer les modé¨les en production avec scalabilité, haute disponibilitàet faible latence</li> <li>Superviser les performances des modé¨les : dérive, recalibration, instrumentation</li> <li>Automatiser l'infrastructure via IaC (Terraform, Ansible€¦), conteneurs (Docker, Kubernetes)</li> <li>Assurer la sécuritàet la conformitàdes modé¨les et des données (RGPD, chiffrement, IAM)</li> <li>Collaborer avec les data scientists et les équipes IT pour industrialiser les prototypes</li> </ul> </div> <div class="profile-requirements"> <h3>Ce que la personne est (compétences attendues)</h3> <p>Un(e) Ingénieur(e) MLOps avec :</p> <ul> <li>Une formation Bac+5 en informatique, data science ou IA</li> <li>Une expérience significative (3 é 5 ans ou plus) sur des projets ML ou d'industrialisation de modé¨les</li> <li>Une maé®trise des outils MLOps : MLFlow, Airflow, Kubeflow, Docker, Kubernetes</li> <li>Des compétences en cloud (AWS, Azure, GCP), scripting (Python, Bash), CI/CD</li> <li>Une expertise en monitoring des modé¨les, détection de dérive, auditabilité</li> <li>Des qualités personnelles : rigueur, curiosité, autonomie, vision systé¨me globale</li> <li>Une capacitàé vulgariser les enjeux ML et é travailler en transversal avec les métiers et les équipes techniques</li> </ul> </div> <div class="rate-info"> <h3>Taux Journalier Moyen (TJM)</h3> <p class="rate">800 é 900 ‚¬/jour HT</p> </div> <div class="contact-section"> <h3>Intéressé(e) par cette opportunità?</h3> <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn" class="contact-btn">Publier l'offre</button> </div> </div> </section> </main> <footer class="footer"> <div class="container"> <p>&copy; 2025 FEA - Filié¨re Architecture. Tous droits réservés.</p> </div> </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle" class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> <span class="chatbot-notification" id="chat-notification"></span> </button> <!-- Conteneur du chatbot (cachàpar défaut) --> <div id="chatbot-container"> <div class="chatbot-header"> <div class="header-content"> <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png" alt="Chatbot"> </div> <div class="chatbot-info"> <h3>Assistant FEA</h3> <p>En ligne</p> </div> </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"> <line x1="5" y1="12" x2="19" y2="12"></line> </svg> </button> </div> <div class="chatbot-messages" id="chat-messages"> <div class="welcome-message"> <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p> <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre sujet liàé la filié¨re architecture.</p> </div> </div> <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/> </svg> </button> </div> </div> <script src="JS/chatbot.js"></script> <script src="JS/email-service.js"></script> <script src="JS/script.js"></script> </body> </html> 
+﻿﻿<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Language" content="fr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>6.3 Ingénieur MLOps (Opération pour apprentissage automatique) - FEA</title>
+    <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+    <header class="header">
+        <div class="container">
+            <div class="logo">
+                <h1>FEA</h1>
+                <p>Filière d'Excellence Architecture</p>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">› Retour à l'index</a></li>
+                    <li><a href="#evaluation">Évaluation Technique</a></li>
+                    <li><a href="#fiche-poste">Fiche de Poste</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main-content"> <!-- Profil Header -->
+        <section class="profile-header-section">
+            <div class="container">
+                <div class="profile-header">
+                    <h1>6.3 Ingénieur MLOps (Opération pour apprentissage automatique)</h1> <span
+                        class="badge available">Disponible</span>
+                </div>
+                <div class="breadcrumb"> <a href="index.html">Index</a> †’ <a href="index.html#data">6. Data & IA</a> †’
+                    <span>6.3 Ingénieur MLOps (Opération pour apprentissage automatique)</span> </div>
+            </div>
+        </section> <!-- Section Évaluation Technique -->
+        <section id="evaluation" class="section">
+            <div class="container">
+                <h2>Évaluation Technique</h2>
+                <div class="competence-domain">
+                    <h3>Cycle de vie des modé¨les & pipelines MLOps</h3>
+                    <p>Conception et automatisation de pipelines ML (entraé®nement, validation, déploiement). Gestion du
+                        versioning des modé¨les (model registry, tracking). Orchestration de workflows (Airflow,
+                        Kubeflow, MLFlow, Prefect, etc.).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Déploiement & serving des modé¨les</h3>
+                    <p>Packaging des modé¨les (Docker, ONNX, etc.). Mise en production : API serving, batch scoring,
+                        inference. Stratégies de déploiement (canary, blue/green, A/B). Scalabilité, haute
+                        disponibilité, gestion des latences.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Infrastructure, conteneurs & cloud</h3>
+                    <p>Infrastructure as Code (Terraform, CloudFormation, Ansible). Containers & orchestration (Docker,
+                        Kubernetes). Expérience cloud (AWS, Azure, GCP) et environnements hybrides. Conception des
+                        clusters, autoscaling, optimisation des ressources.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Monitoring, observabilité & détection de dérive</h3>
+                    <p>Métriques de performance des modé¨les (accuracy, drift, latence). Instrumentation : logs, traces,
+                        alertes. Détection des dérives, recalibration régulié¨re. Dashboards (Grafana, Kibana,
+                        Prometheus, etc.).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>securité & conformitàML / IA</h3>
+                    <p>securité des modé¨les et des données (chiffrement, accé¨s contré´lé). Respect de la
+                        confidentialité, RGPD, anonymisation. Auditabilitàet traé§abilitàdes modé¨les. Robustesse
+                        (adversarial, validation).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Intégration & interopérabilité</h3>
+                    <p>Connecteurs vers les systé¨mes existants (bases de données, API métier, flux de données).
+                        Interopérabilitàentre modules de pipeline et services. Synchronisation entre pipelines ML et
+                        pipelines d'ingénierie / devops.</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Automatisation & DevOps / DevSecOps</h3>
+                    <p>Automatisation des tests de modé¨les (unitaires, intégration). CI/CD pour pipelines ML.
+                        Intégration avec les outils DevOps de l'organisation. Scripting (Python, Bash, etc.).</p>
+                </div>
+                <div class="competence-domain">
+                    <h3>Collaboration & interface Data / ML / IT</h3>
+                    <p>Travail rapprochàavec les data scientists pour industrialiser leurs prototypes. Dialogue avec les
+                        équipes infrastructure / ops pour déploiement. Vulgarisation des enjeux ML devant des non
+                        spécialistes.</p>
+                </div>
+            </div>
+        </section> <!-- Section Fiche de Poste -->
+        <section id="fiche-poste" class="section">
+            <div class="container">
+                <h2>Fiche de Poste pour Agent de talent</h2>
+                <div class="mission-description">
+                    <h3>Vous étes Ingénieur MLOPS SI et vous recherchez une mission en freelance ?</h3>
+                    <p>Nous avons le projet qu'il vous faut pour l'un de nos clients basés é Niort dans le secteur des
+                        assurances.</p>
+                </div>
+                <div class="mission-expectations">
+                    <h3>Ce que l'on attend de la personne (type de mission)</h3>
+                    <p>L'Ingénieur MLOps est chargàde :</p>
+                    <ul>
+                        <li>Concevoir et automatiser les pipelines ML : entraé®nement, validation, déploiement</li>
+                        <li>Gérer le cycle de vie des modé¨les : versioning, orchestration, serving (API, batch,
+                            inference)</li>
+                        <li>Déployer les modé¨les en production avec scalabilité, haute disponibilitàet faible latence
+                        </li>
+                        <li>Superviser les performances des modé¨les : dérive, recalibration, instrumentation</li>
+                        <li>Automatiser l'infrastructure via IaC (Terraform, Ansible€¦), conteneurs (Docker, Kubernetes)
+                        </li>
+                        <li>Assurer la securité et la Conformité modé¨les et des données (RGPD, chiffrement, IAM)</li>
+                        <li>Collaborer avec les data scientists et les équipes IT pour industrialiser les prototypes
+                        </li>
+                    </ul>
+                </div>
+                <div class="profile-requirements">
+                    <h3>Ce que la personne est (compétences attendues)</h3>
+                    <p>Un(e) Ingénieur(e) MLOps avec :</p>
+                    <ul>
+                        <li>Une formation Bac+5 en informatique, data science ou IA</li>
+                        <li>Une expérience significative (3 é 5 ans ou plus) sur des projets ML ou d'industrialisation
+                            de modé¨les</li>
+                        <li>Une maîtrise des outils MLOps : MLFlow, Airflow, Kubeflow, Docker, Kubernetes</li>
+                        <li>Des compétences en cloud (AWS, Azure, GCP), scripting (Python, Bash), CI/CD</li>
+                        <li>Une expertise en monitoring des modé¨les, détection de dérive, auditabilité</li>
+                        <li>Des qualités personnelles : rigueur, curiosité, autonomie, vision systé¨me globale</li>
+                        <li>Une Capacitévulgariser les enjeux ML et é travailler en transversal avec les métiers et
+                            les équipes techniques</li>
+                    </ul>
+                </div>
+                <div class="rate-info">
+                    <h3>Taux Journalier Moyen (TJM)</h3>
+                    <p class="rate">800 é 900 ‚jour HT</p>
+                </div>
+                <div class="contact-section">
+                    <h3>Intéressé(e) par cette opportunità?</h3>
+                    <p>Envoyez-nous votre CV et nous vous recontacterons rapidement.</p> <button id="publishBtn"
+                        class="contact-btn">Publier l'offre</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2025 FEA - Filière Architecture. Tous droits réservés.</p>
+        </div>
+    </footer> <!-- Chatbot --> <!-- Bouton flottant pour ouvrir le chat --> <button id="chatbot-toggle"
+        class="chatbot-toggle"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z" stroke="currentColor"
+                stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg> <span class="chatbot-notification" id="chat-notification"></span> </button>
+    <!-- Conteneur du chatbot (cachàpar défaut) -->
+    <div id="chatbot-container">
+        <div class="chatbot-header">
+            <div class="header-content">
+                <div class="chatbot-avatar"> <img src="https://img.icons8.com/color/96/000000/chatbot.png"
+                        alt="Chatbot"> </div>
+                <div class="chatbot-info">
+                    <h3>Assistant FEA</h3>
+                    <p>En ligne</p>
+                </div>
+            </div> <button id="minimize-chat" class="icon-btn"> <svg width="16" height="16" viewBox="0 0 24 24"
+                    fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                </svg> </button>
+        </div>
+        <div class="chatbot-messages" id="chat-messages">
+            <div class="welcome-message">
+                <p>👋Bonjour ! Je suis votre assistant virtuel. Comment puis-je vous aider aujourd'hui ?</p>
+                <p>Vous pouvez me poser des questions sur les fiches de poste, les compétences requises ou tout autre
+                    sujet liàé la Filière architecture.</p>
+            </div>
+        </div>
+        <div class="chatbot-input"> <input type="text" id="user-input" placeholder="Posez votre question..."> <button
+                id="send-message"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg> </button> </div>
+    </div>
+    <script src="JS/chatbot.js"></script>
+    <script src="JS/email-service.js"></script>
+    <script src="JS/script.js"></script>
+</body>
+
+</html>
